# llm_wiki

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING_OPPORTUNITIES.md  HERMES.md  LEARNING_PATH.md  README.md  README_CN.md  README_JA.md  README_KO.md  SKILL.md  draft-feature-demo.html  index.html  install.sh  package-lock.json  package.json  start-dev.cmd  vite.config.ts  【README】修改内容.md
llm_wiki-backend-python/: .gitignore  pyproject.toml  run_server.py
llm_wiki-backend-python/app/: __init__.py  config.py  main.py
llm_wiki-backend-python/app/api/: client.py  router.py
llm_wiki-backend-python/app/api/routes/: chat.py  config.py  files.py  graph.py  ingest.py  lint.py  maintenance.py  projects.py  providers.py  research.py  review.py  sidecar.py  vector.py  version.py  watcher.py
llm_wiki-backend-python/app/core/: templates.py
llm_wiki-backend-python/app/core/chat/: __init__.py  agent.py  context.py  tools.py
llm_wiki-backend-python/app/core/graph/: __init__.py  builder.py  community.py  incremental.py  insights.py  relevance.py
llm_wiki-backend-python/app/core/ingest/: __init__.py  analyzer.py  cache.py  generator.py  pipeline.py  queue.py  source_identity.py  worker.py
llm_wiki-backend-python/app/models/: config.py
llm_wiki-backend-python/app/parsers/: __init__.py  base.py  builtin.py  docx.py  pdf.py  pptx.py  registry.py  xlsx.py
llm_wiki-backend-python/app/services/: chunk_vector_store.py  clip_service.py  config_service.py  file_service.py  file_watcher.py  project_service.py  sidecar.py  version_control.py
(+607 files in other folders)
