[project]
name = "llm-wiki-python"
version = "0.1.0"
description = "LLM Wiki Python Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pillow>=12.3.0",
    "lancedb>=0.34.0",
    "networkx>=3.6.1",
    "watchfiles>=1.2.0",
    "tavily-python>=0.7.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
